8/12 4:26pm - Fixed bottom sections not fitting. Issue:: bottom sections arn't fitting on bottom.

--- a/style.css
+++ b/style.css
@@ -190,15 +190,15 @@ button {
 @media (min-width:375px) {
 
     body {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        height: 100px;
+      max-width: 700px;
+      margin: 0 auto;
     }
 
-    .grid-col-span-2 {
-        grid-column: span 2;
+    .boxes {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
     }
-    
+
     h1 {
         font-size: 1.5rem;
     }
@@ -221,6 +221,7 @@ button {
 
     .why {
         border-radius: 0 0 .5rem 0;
+
     }
 
     ul {
